--- a/style.css
+++ b/style.css
@@ -3,3 +3,14 @@ h1 {
     font-family: 'Courier New', Courier, monospace;
     color: blueviolet;
 }
+
+h2 {
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: crimson;
+}
+
+p {
+    font-size: 12px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
